--- a/nuspecs/Microsoft.AspNet.SignalR.Client.nuspec
+++ b/nuspecs/Microsoft.AspNet.SignalR.Client.nuspec
@@ -29,6 +29,12 @@
         <dependency id="Newtonsoft.Json" version="6.0.4" />
         <dependency id="Microsoft.Net.Http" version="2.2.28" />
       </group>
+	  <group targetFramework=".NETStandard1.6">
+        <dependency id="Newtonsoft.Json" version="9.0.1" />
+        <dependency id="System.Net.Requests" version="4.0.11" />
+		<dependency id="System.Net.Http" version="4.1.0" />
+		<dependency id="System.Threading.Thread" version="4.0.0" />
+      </group>
     </dependencies>
   </metadata>
   <files>
@@ -42,5 +48,7 @@
     <file src="portable-win81+wpa81\Microsoft.AspNet.SignalR.Client.xml" target="lib\portable-win81+wpa81" />
     <file src="netcore50\Microsoft.AspNet.SignalR.Client.dll" target="lib\netcore50" />
     <file src="netcore50\Microsoft.AspNet.SignalR.Client.Xml" target="lib\netcore50" />
+	<file src="dnxcore50\Microsoft.AspNet.SignalR.Client.dll" target="lib\dnxcore50" />
+    <file src="dnxcore50\Microsoft.AspNet.SignalR.Client.Xml" target="lib\dnxcore50" />
   </files>
 </package>
