--- a/src/Microsoft.AspNet.SignalR.Client40/Microsoft.AspNet.SignalR.Client40.csproj
+++ b/src/Microsoft.AspNet.SignalR.Client40/Microsoft.AspNet.SignalR.Client40.csproj
@@ -247,7 +247,7 @@
       <Link>Infrastructure\TaskQueue.cs</Link>
     </Compile>
     <Compile Include="..\Microsoft.AspNet.SignalR.Core\TaskAsyncHelper.cs">
-      <Link>Infrastructure\TaskAsyncHelper.cs</Link>
+      <Link>TaskAsyncHelper.cs</Link>
     </Compile>
   </ItemGroup>
   <ItemGroup>
